force-app/main/default/objects/Work_Order_Generation_Status__c/Work_Order_Generation_Status__c.object-meta.xml
<CustomObject>
    <label>Work Order Generation Status</label>
    <nameField>
        <label>Work Order Generation Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Generation Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>