force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <formula>TEXT(Order_Product__r.Installation_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Status</label>
    <type>Text</type>
</CustomField>