force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Inventory_Allocated_on_Order__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Allocated_on_Order__c</fullName>
    <formula>IF( Order_Product__r.Order.Inventory_Allocated__c == True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Allocated on Order?</label>
    <type>Checkbox</type>
</CustomField>