force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Inventory_Allocated_on_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Allocated_on_Order_Product__c</fullName>
    <formula>IF( Order_Product__r.Inventory_Allocated__c == True, True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Allocated on Order Product?</label>
    <type>Checkbox</type>
</CustomField>