force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Is_Account_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_On_Hold__c</fullName>
    <formula>IF( Order_Product__r.Order.Account.On_Hold__c == True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account On Hold</label>
    <type>Checkbox</type>
</CustomField>