force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Is_Inventory_allocated_on_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Inventory_allocated_on_Order_Product__c</fullName>
    <formula>IF( Order_Product__r.Inventory_Allocated__c == true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Inventory allocated on Order Product?</label>
    <type>Checkbox</type>
</CustomField>