force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Is_Order_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Active__c</fullName>
    <formula>IF( ISPICKVAL(Order_Product__r.Order.Status, &apos;Activated&apos;), True,False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Order Active?</label>
    <type>Checkbox</type>
</CustomField>