force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Is_Order_Product_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Product_IsActive__c</fullName>
    <formula>IF( Order_Product__r.IsActive__c == True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Order Product IsActive?</label>
    <type>Checkbox</type>
</CustomField>