force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Last_Automation_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Automation_Created_Date__c</fullName>
    <formula>Order_Product__r.Last_Automation_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Automation Created Date</label>
    <type>Date</type>
</CustomField>