force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Last_Serviced_Date_plus_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Last_Serviced_Date_plus_Frequency__c</fullName>
    <formula>Order_Product_Last_Effective_Service__c +  FrequencyInDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Serviced Date plus Frequency</label>
    <type>Date</type>
</CustomField>