force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Work Order Generation Status</relationshipLabel>
    <relationshipName>Work_Order_Generation_Status</relationshipName>
    <type>Lookup</type>
</CustomField>