force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Order_Account_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Order_Account_Inactive__c</fullName>
    <label>Order Account Inactive</label>
    <length>10</length>
    <type>Text</type>
</CustomField>