force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Work Order Generation Status</relationshipLabel>
    <relationshipName>Work_Order_Generation_Status</relationshipName>
    <type>Lookup</type>
</CustomField>