force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Order_Product_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Installation_Status__c</fullName>
    <label>Order Product Installation Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>