force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Order_Product_Inventory_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Inventory_Allocated__c</fullName>
    <label>Order Product Inventory Allocated</label>
    <length>10</length>
    <type>Text</type>
</CustomField>