force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Order_Product_Valid_for_Install_Replace__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Valid_for_Install_Replace__c</fullName>
    <label>Order_Product Valid for Install Replace</label>
    <length>30</length>
    <type>Text</type>
</CustomField>