force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Order_Season_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Season_End_Date__c</fullName>
    <formula>Order_Product__r.Order.Season_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Season End Date</label>
    <type>Date</type>
</CustomField>