force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Reasons_for_failures__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_failures__c</fullName>
    <label>Reasons for failures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Inactive |</fullName>
            </value>
            <value>
                <fullName>Account Inactive | Account On Hold |</fullName>
            </value>
            <value>
                <fullName>Account Inactive | Account On Hold | Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>Account Inactive | Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>Account Inactive | Order is not active |</fullName>
            </value>
            <value>
                <fullName>Account Inactive | Pending Install/Remove/Replace | Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>Account On Hold |</fullName>
            </value>
            <value>
                <fullName>Account On Hold | Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>Account On Hold | Inventory not allocated on Order |</fullName>
            </value>
            <value>
                <fullName>Account On Hold | Inventory not allocated on Order | Order is not active |</fullName>
            </value>
            <value>
                <fullName>Account On Hold | Pending Install/Remove/Replace | Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>Inventory not allocated on Order |</fullName>
            </value>
            <value>
                <fullName>Inventory not allocated on Order | Order is not active |</fullName>
            </value>
            <value>
                <fullName>Inventory not allocated on Order | Pending Install/Remove/Replace |</fullName>
            </value>
            <value>
                <fullName>Order Product’s frequency Not in Allowable frequency |</fullName>
            </value>
            <value>
                <fullName>Order is not active |</fullName>
            </value>
            <value>
                <fullName>Order is not active | Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>Pending Install/Remove/Replace |</fullName>
            </value>
            <value>
                <fullName>Pending Install/Remove/Replace | Inventory not allocated on Order Product |</fullName>
            </value>
            <value>
                <fullName>blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>