force-app/main/default/objects/Work_Order_Generation_Status__c/fields/WOLI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Start_Date__c</fullName>
    <label>Work Order Line Item Start Date Stamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>