force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Work Order Generation Status</relationshipLabel>
    <relationshipName>Work_Order_Generation_Status</relationshipName>
    <type>Lookup</type>
</CustomField>