force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Work_Order_Line_Item_End_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item_End_Date_Stamp__c</fullName>
    <label>Work Order Line Item End Date Stamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>