force-app/main/default/objects/Work_Order_Generation_Status__c/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <label>Work Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>